@@ -1,3 +1,5 @@
+* Stop non-HTML documents throwing errors by changing checks like `if (from.getElementsByTagName)` to `if ('getElementsByTagName' in from)`. [jddalton]
+
 * Rename private variable `NODE_NAME_TO_UPPER_CASE` to `TO_UPPER_CASE`. [jddalton]
 
 * Ensure selectors like `* > :first-child` and `> :first-child` return the same results. [jddalton]
